# Labs-for-C-

./: 10_1(2).cpp  123456_9(5).cpp  1_1(2).cpp  1_1.cpp  1_3.cpp  1_5.cpp  1_7.cpp  1_9(4).cpp  1_9.cpp  2_1.cpp  2_3.cpp  2_5.cpp  2_6(2).cpp  2_7.cpp  2_9(4).cpp  2_9.cpp  3_1.cpp  3_3.cpp  3_5.cpp  3_7.cpp  3_8(2).cpp  3_9.cpp  4_1.cpp  4_2(2).cpp  4_3.cpp  4_5.cpp  4_7.cpp  4_9.cpp  5_9(2).cpp  6_9(2).cpp  7_6(2).cpp  8_2(2).cpp  9_1(2).cpp  CMakeLists.txt  README.md  main.cpp  task4_nums.txt  task5_nums.txt  task6_firstchars.txt  task6_text.txt
